--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script type="module" src="index.js"></script>
+  <script type="module" src="./js/greeting.js"></script>
+  <script type="module" src="./js/music.js"></script>
+  <script type="module" src="./js/quotes.js"></script>
+  <script type="module" src="./js/slider.js"></script>
+  <script type="module" src="./js/weather.js"></script>
 </body>
 </html>
