--- a/index.html
+++ b/index.html
@@ -10,16 +10,39 @@
 </head>
 <body>
   <header class="header">
-    <div class="player">
-      <div class="player-controls">
-        <button class="play-prev player-icon"></button>
-        <button class="play player-icon"></button>
-        <button class="play-next player-icon"></button>
+    <div class="player">       
+      <div class="player__container">  
+        <div class="player__controls">
+          <button class="play-prev player-icon"></button>
+          <button class="play player-icon"></button>
+          <button class="play-next player-icon"></button>
+        </div>
+        <div class="player__body">
+          <div class="player__body-main">
+            <div class="player-time">
+              <div class="current-time">0:00</div>
+              <div class="divider">/</div>
+              <div class="music-length"></div>
+            </div>
+            <div class="music-name"></div>
+            <div class="volume__container">
+              <div class="volume-button">
+                <div class="volume volume-icon"></div>
+              </div>
+              <div class="volume-slider">
+                <div class="volume-percentage"></div>
+              </div>
+            </div>
+          </div>
+          <div class="timeline">
+            <div class="progress-bar"></div>
+          </div>
+        </div> 
       </div>
       <ul class="play-list"></ul>
     </div>
     <div class="weather">
-      <input type="text" class="city" />
+      <input type="text" class="city" placeholder="[City]"/>
       <i class="weather-icon owf"></i>
       <div class="weather-error"></div>
       <div class="description-container">
@@ -39,7 +62,7 @@
     <date class="date"></date>
     <div class="greeting-container">
       <span class="greeting"></span>
-      <input type="text" class="name" />
+      <input type="text" class="name" placeholder="[Enter name]"/>
     </div>
   </main>
   <footer class="footer">
@@ -49,10 +72,6 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script type="module" src="./js/greeting.js"></script>
-  <script type="module" src="./js/music.js"></script>
-  <script type="module" src="./js/quotes.js"></script>
-  <script type="module" src="./js/slider.js"></script>
-  <script type="module" src="./js/weather.js"></script>
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
