--- a/index.html
+++ b/index.html
@@ -66,6 +66,24 @@
     </div>
   </main>
   <footer class="footer">
+    <div class="settings__container">
+      <div class="language-change">
+        <div class="language__main">Language</div>
+        <div class="button r" id="button-3">
+          <input type="checkbox" class="checkbox">
+          <div class="knobs"></div>
+          <div class="layer"></div>
+       </div>
+      </div>
+      <div class="background-source">
+        <div class="background-source__main">Background source</div>
+        <input type="text" class="background-source__input">
+      </div>
+      <div class="hide-blocks__container">
+        <div class="hide-blocks__main">Hide sections</div>
+      </div>
+      <div class="settings-icon"></div>
+    </div>
     <button class="change-quote"></button>
     <div>
       <div class="quote"></div>
