--- a/index.html
+++ b/index.html
@@ -69,26 +69,87 @@
     <div class="settings__container">
       <div class="language-change">
         <div class="language__main">Language</div>
-        <div class="button r" id="button-3">
-          <input type="checkbox" class="checkbox">
-          <div class="knobs"></div>
-          <div class="layer"></div>
-       </div>
-      </div>
-      <div class="background-source">
-        <div class="background-source__main">Background source</div>
-        <input type="text" class="background-source__input">
+        <div class="language-change__body">
+          <div class="language__weather">
+            <div class="language__greeting-header">Greeting</div>
+            <div class="button switch language-change-button">
+              <input type="checkbox" class="checkbox language-greeting">
+              <div class="knobs"></div>
+              <div class="layer"></div>
+           </div>
+          </div>
+          <div class="language__greeting">
+            <div class="language__weather-header">Weather</div>
+            <div class="button switch language-change-button">
+              <input type="checkbox" class="checkbox language-weather">
+              <div class="knobs"></div>
+              <div class="layer"></div>
+           </div>
+          </div> 
+        </div>            
       </div>
       <div class="hide-blocks__container">
         <div class="hide-blocks__main">Hide sections</div>
+        <div class="hide-blocks__body">
+          <div class="hide-blocks__element hide-time">
+            <div class="hide-blocks__element-header">Time</div>
+            <div class="button switch">
+              <input type="checkbox" class="checkbox hide-time-btn">
+              <div class="knobs"></div>
+              <div class="layer"></div>
+           </div>
+          </div>
+          <div class="hide-blocks__element hide-date">
+            <div class="hide-blocks__element-header">Date</div>
+            <div class="button switch">
+              <input type="checkbox" class="checkbox hide-date-btn">
+              <div class="knobs"></div>
+              <div class="layer"></div>
+           </div>
+          </div>
+          <div class="hide-blocks__element hide-greeting">
+            <div class="hide-blocks__element-header">Greeting</div>
+            <div class="button switch">
+              <input type="checkbox" class="checkbox hide-greeting-btn">
+              <div class="knobs"></div>
+              <div class="layer"></div>
+           </div>
+          </div>
+          <div class="hide-blocks__element hide-quote">
+            <div class="hide-blocks__element-header">Quote</div>
+            <div class="button switch">
+              <input type="checkbox" class="checkbox hide-quote-btn">
+              <div class="knobs"></div>
+              <div class="layer"></div>
+           </div>
+          </div>
+          <div class="hide-blocks__element hide-weather">
+            <div class="hide-blocks__element-header">Weather</div>
+            <div class="button switch">
+              <input type="checkbox" class="checkbox hide-weather-btn">
+              <div class="knobs"></div>
+              <div class="layer"></div>
+           </div>
+          </div>
+          <div class="hide-blocks__element hide-music">
+            <div class="hide-blocks__element-header">Music</div>
+            <div class="button switch">
+              <input type="checkbox" class="checkbox hide-music-btn">
+              <div class="knobs"></div>
+              <div class="layer"></div>
+           </div>
+          </div>
+        </div>     
       </div>
-      <div class="settings-icon"></div>
     </div>
-    <button class="change-quote"></button>
-    <div>
-      <div class="quote"></div>
-      <div class="author"></div>
-    </div>
+    <div class="settings-icon"></div>
+    <div class="quote__block">
+      <button class="change-quote"></button>
+      <div>
+        <div class="quote"></div>
+        <div class="author"></div>
+      </div>
+    </div> 
   </footer>
   <script type="module" src="./index.js"></script>
 </body>
